jquery and jquery.colorbox served static

--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <html>
     <head>
-        <script
-            src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.4/jquery.colorbox-min.js"></script>
+        <script src="/static/jquery.min.js"></script>
+        <script src="/static/jquery.colorbox.min.js"></script>
+        <script src="/static/OverlayAsPromised.js"></script>
     </head>
     <body>
-        <div class="test">hallo</div>
-        <script>
-            $.colorbox({
-                inline:       true,
-                href:         $('.test'),
-                initialWidth: 320,
-                open:         true,
-                content:      $('.test').html(),
-                closeButton:  false,
-                overlayClose: false,
-                escKey:		  false,
-                fixed:        true,
-            });
-        </script>
+        <div class="test">
+            <img src="https://pre00.deviantart.net/00de/th/pre/f/2012/025/3/9/cactus_hug_by_necrothic-d4c6007.png" style="max-width: 200px; height: auto">
+        </div>
     </body>
 </html>
