application moved to src folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <script src="/static/jquery.min.js"></script>
         <script src="/static/jquery.colorbox.min.js"></script>
-        <script src="/static/OverlayAsPromised.js"></script>
+        <script src="/src/OverlayAsPromised.js"></script>
     </head>
     <body>
         <div class="test">
