--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <script src="/static/jquery.min.js"></script>
-        <script src="/static/jquery.colorbox.min.js"></script>
+        <script src="/lib/jquery.min.js"></script>
+        <script src="/lib/jquery.colorbox.min.js"></script>
         <script src="/src/OverlayAsPromised.js"></script>
     </head>
     <body>
