--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <script src="/lib/jquery.min.js"></script>
         <script src="/lib/jquery.colorbox.min.js"></script>
         <script src="/src/OverlayAsPromised.js"></script>
+        <script src="/src/app.js"></script>
     </head>
     <body>
         <div class="test">
