--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="/lib/jquery.colorbox.min.js"></script>
         <script src="/src/OverlayAsPromised.js"></script>
         <script src="/src/app.js"></script>
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <div class="test">
