--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
         <script src="/lib/jquery.min.js"></script>
         <script src="/lib/jquery.colorbox.min.js"></script>
-        <script src="/src/OverlayAsPromised.js"></script>
+        <script src="/src/overlay-as-promised.js"></script>
         <script src="/src/app.js"></script>
-        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <div class="test">
