--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <script src="/src/app.js"></script>
     </head>
     <body>
-        <div class="test">
+        <input type="button" id="open-overlay" value="open overlay">
+        <div class="test" style="display: none">
             <img src="https://pre00.deviantart.net/00de/th/pre/f/2012/025/3/9/cactus_hug_by_necrothic-d4c6007.png" style="max-width: 200px; height: auto">
         </div>
     </body>
