--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="/css/style.css">
-        <script src="/lib/jquery.min.js"></script>
+        <script src="/lib/jquery-1.12.4.min.js"></script>
         <script src="/lib/jquery.colorbox.min.js"></script>
+        <script src="/src/polyfills.js"></script>
         <script src="/src/overlay-as-promised.js"></script>
         <script src="/src/app.js"></script>
     </head>
     <body>
         <input type="button" id="open-overlay" value="open overlay">
+        <input type="button" id="add-content" value="add content">
+        <input type="button" id="resize-overlay" value="resize overlay">
         <div class="test" style="display: none">
-            <img src="https://pre00.deviantart.net/00de/th/pre/f/2012/025/3/9/cactus_hug_by_necrothic-d4c6007.png" style="max-width: 200px; height: auto">
+            <img src="https://pre00.deviantart.net/00de/th/pre/f/2012/025/3/9/cactus_hug_by_necrothic-d4c6007.png" style="width: 200px; height: auto">
         </div>
     </body>
 </html>
