--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <input type="button" id="open-overlay" value="open overlay">
         <input type="button" id="add-content" value="add content">
         <input type="button" id="resize-overlay" value="resize overlay">
-        <div class="test" style="display: none">
-            <img src="https://pre00.deviantart.net/00de/th/pre/f/2012/025/3/9/cactus_hug_by_necrothic-d4c6007.png" style="width: 200px; height: auto">
+        <div class="test" style="display: none; padding-top: 25px">
+            <img src="https://pre00.deviantart.net/00de/th/pre/f/2012/025/3/9/cactus_hug_by_necrothic-d4c6007.png" style="width: 300px; height: auto">
         </div>
     </body>
 </html>
